trained gumbel, but error at the end

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ lib/__pycache__/PonderCAModel.cpython-39.pyc
 lib/__pycache__/utils_vis.cpython-39.pyc
 lib/__pycache__/utils.cpython-39.pyc
 trainEnergyCA.log
+trainEnergyCA.log
