--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-lib/__pycache__/__init__.cpython-39.pyc
-lib/__pycache__/AdaptiveFireRateCAModel.cpython-39.pyc
-lib/__pycache__/CAModel.cpython-39.pyc
-lib/__pycache__/losses.cpython-39.pyc
-lib/__pycache__/PonderCAModel.cpython-39.pyc
-lib/__pycache__/utils_vis.cpython-39.pyc
-lib/__pycache__/utils.cpython-39.pyc
-trainEnergyCA.log
-trainEnergyCA.log
+*/*.pyc
+*.pyc
+*.log
+models/*.pth
+models/*/*.pth
+figs/*.png
+test_losses/*.csv
+histories/*.csv
